@@ -1,5 +1,11 @@
 2009-03-03  Dan Williams  <dcbw@redhat.com>
 
+	* src/gconf-helpers/nma-gconf-connection.c
+		- CVE-2009-0578: restrict connection changes to applet user
+		- (update, do_delete, is_user_authorized):  check UID of dbus request
+
+2009-03-03  Dan Williams  <dcbw@redhat.com>
+
 	* nm-applet.conf
 		- CVE-2009-0365: only allow root to get secrets
 
